minor refactoring, delete some empty strings, add CaveModel.csproj to GuiInterface.csproj

--- a/Maze/GuiInterface/GuiInterface.csproj
+++ b/Maze/GuiInterface/GuiInterface.csproj
@@ -24,6 +24,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\MazeModel\MazeModel.csproj" />
+      <ProjectReference Include="..\CaveModel\CaveModel.csproj" />
     </ItemGroup>
 
     <ItemGroup>
