fixed test Given_Generate_When_FourthRowsAndColsAsParameter_Then_ReturnRightMaze and also fix dependency name in MazeTest.csproj

--- a/Maze/MazeTests/MazeTests.csproj
+++ b/Maze/MazeTests/MazeTests.csproj
@@ -22,7 +22,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\MazeModel\MazeModel.csproj" />
-      <ProjectReference Include="..\Common\NumbersGenerator.csproj" />
+       <ProjectReference Include="..\Common\Common.csproj" />
     </ItemGroup>
 
 </Project>
