Tests for Cave and StringCaveImporter

--- a/Maze/MazeTests/MazeTests.csproj
+++ b/Maze/MazeTests/MazeTests.csproj
@@ -21,7 +21,8 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Model\Model.csproj" />
+      <ProjectReference Include="..\CaveModel\CaveModel.csproj" />
+      <ProjectReference Include="..\MazeModel\MazeModel.csproj" />
     </ItemGroup>
 
 </Project>
