import and export cave is done

--- a/Maze/CaveModel/CaveModel.csproj
+++ b/Maze/CaveModel/CaveModel.csproj
@@ -10,4 +10,8 @@
       <ProjectReference Include="..\Common\Common.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Compile Remove="Importers\CaveImporter.cs" />
+    </ItemGroup>
+
 </Project>
